<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatEditProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <EditText
        android:id="@+id/chatEditProfileEditFirstNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/edittext_firstname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView_editProfileFirstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_editProfileFirstname"
        app:layout_constraintTop_toTopOf="@+id/textView_editProfileFirstname" />

    <EditText
        android:id="@+id/chatEditProfileEditLastNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/edittext_lastname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView_editProfileLastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_editProfileLastname"
        app:layout_constraintTop_toTopOf="@+id/textView_editProfileLastname"
        app:layout_constraintVertical_bias="0.476" />

    <ImageView
        android:id="@+id/chatEditProfileImageView"
        android:layout_width="143dp"
        android:layout_height="136dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/select_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chatEditProfileFinishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_editProfileFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/textview_firstname"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatEditProfileImageView" />

    <TextView
        android:id="@+id/textView_editProfileLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/textview_lastname"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_editProfileFirstname"
        app:layout_constraintTop_toBottomOf="@+id/textView_editProfileFirstname" />

    <TextView
        android:id="@+id/textView_editProfileHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/textview_hobby"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_editProfileLastname"
        app:layout_constraintTop_toBottomOf="@+id/textView_editProfileLastname" />

    <EditText
        android:id="@+id/chatEditProfileEditHobbyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_hobby"
        android:textColor="@color/material_dynamic_neutral40"
        app:layout_constraintBottom_toBottomOf="@+id/textView_editProfileHobby"
        app:layout_constraintEnd_toEndOf="@+id/chatEditProfileEditLastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/chatEditProfileEditLastNameEditText"
        app:layout_constraintTop_toTopOf="@+id/textView_editProfileHobby" />
</androidx.constraintlayout.widget.ConstraintLayout>