<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DisplayProfileFragment">

    <TextView
        android:id="@+id/displayProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textview_email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/displayProfileLastname"
        app:layout_constraintTop_toBottomOf="@+id/displayProfileLastname" />

    <TextView
        android:id="@+id/displayProfileHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textview_hobby"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/displayProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/displayProfileEmail" />

    <TextView
        android:id="@+id/textViewPassEmailFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/displayProfileLastname"
        app:layout_constraintStart_toEndOf="@+id/displayProfileLastname"
        app:layout_constraintTop_toTopOf="@+id/displayProfileLastname" />

    <TextView
        android:id="@+id/displayProfileLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textview_lastname"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/displayProfileFirstname"
        app:layout_constraintTop_toBottomOf="@+id/displayProfileFirstname" />

    <ImageView
        android:id="@+id/imageViewDisplayAvatarFragment"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select_avatar" />

    <TextView
        android:id="@+id/displayProfileFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/textview_firstname"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDisplayAvatarFragment" />

    <TextView
        android:id="@+id/textViewPassNameFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/displayProfileFirstname"
        app:layout_constraintStart_toEndOf="@+id/displayProfileFirstname"
        app:layout_constraintTop_toTopOf="@+id/displayProfileFirstname" />

    <Button
        android:id="@+id/displayProfileButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>